# cms-1

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  config.toml
api/: Cargo.toml
api/src/: flash.rs  lib.rs
api/static/css/: ckeditor-custom.css  global.css  login.css  menu.css  space-editor.css  space.css  table.css
api/static/js/: login.js  menu.js  space-editor.js  space.js  table.js
api/static/js/ckeditor5-36/: README.md  package.json
api/static/js/ckeditor5-36/sample/: index.html
api/static/js/ckeditor5-36/src/: ckeditor.js
api/static/js/ckeditor5-38/: README.md  package.json
api/static/js/ckeditor5-38/sample/: index.html
api/static/js/ckeditor5-38/src/: ckeditor.js
api/templates/: header.html.tera  layout.html.tera
api/templates/groups/: edit.html.tera  index.html.tera  new.html.tera
api/templates/posts/: edit.html.tera  index.html.tera  new.html.tera  raw.html.tera  view.html.tera
api/templates/spaces/: edit.html.tera  index.html.tera  new.html.tera  view.html.tera
api/templates/users/: edit.html.tera  index.html.tera  login.html.tera  new.html.tera
core/: Cargo.toml
core/src/: lib.rs  mutation.rs  query.rs
core/tests/: mock.rs
entity/: Cargo.toml
entity/src/: comments.rs  groups.rs  groups_spaces.rs  groups_users.rs  lib.rs  posts.rs  prelude.rs  roles.rs  spaces.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230330_052948_create_table_users.rs  m20230330_053012_create_table_groups.rs  m20230330_053015_create_table_roles.rs  m20230330_053017_create_table_spaces.rs  m20230330_053039_create_table_groups_users.rs  m20230330_053048_create_table_groups_spaces.rs  m20230330_053658_create_table_comments.rs  m20230330_053719_create_table_posts.rs  m20230412_044401_create_default_roles.rs  m20230425_082224_update_posts_mediumtext.rs
migrations/2023-01-05-083631_create_users/: up.sql
migrations/2023-01-06-083631_create_spaces/: down.sql  up.sql
migrations/2023-01-07-083631_create_sessions/: up.sql
migrations/2023-01-08-083631_create_posts/: up.sql
migrations/2023-03-17-113229_slugify_posts/: down.sql  up.sql
src/: main.rs
src/auth/: utils.rs
src/config/: config.rs
src/db/: mod.rs  models.rs  posts.rs  schema.rs  sessions.rs  spaces.rs  users.rs  utils.rs
src/filters/: filter.rs
src/pages/: login.rs  mod.rs  posts.rs  space.rs
src/responses/: responses.rs
src/utils/: utils.rs
static/css/: fonts.css  global.css  login.css  menu.css  (+4 more)
templates/: 404.html.tera  base.html.tera  login.html.tera
(+18 files in other folders)
