[package]
name = "csm-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
csm-core = { path = "../core" }
tokio = { version = "1.23.0", features = ["full"] }
axum = { version = "0.6.12",  features = ["headers", "multipart"] }
jsonwebtoken = "8.0"
once_cell = "1.8"
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["fs"] }
tower-cookies = "0.8.0"
anyhow = "1.0.66"
dotenvy = "0.15.6"
serde = "1.0.149"
serde_json = "1.0.89"
tera = "1.17.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
chrono = "0.4.24"
cookie = "0.17.0"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    ]