[package]
name = "csm-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
chrono = { version = "0.4.24" }
bcrypt = "0.14.0"

[dependencies.sea-orm]
version = "0.11.2" # sea-orm version
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-mysql",
]

[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]
